# Naspy

./: BulkDataEntries.py  LICENSE  README.md  pyproject.toml  read_bdf.py
BULKDATA/: BulkDataEntry.py  __init__.py
BULKDATA/dynamic/: EIGRL.py  __init__.py
BULKDATA/elements/: __init__.py  cbar.py  cquad4.py  ctria3.py
BULKDATA/grid/: __init__.py  grid.py
SCRIPTS/: __init__.py  read_bdf.py  write_hdf5.py
naspy/: BulkDataEntries.py
naspy/SCRIPTS/: __init__.py  read_bdf.py
tests/: cbar.py  grid.py  read_sample_model.py  test_cbar.py  test_grid.py
tests/benchmarks/: test_benchmark_read_bdf.py  test_benchmark_read_card.py
tests/profiling/: profile_read_bdf.py  profile_read_card.py  profile_utils.py
