[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pytest",
    "pytest-benchmark",
]

[project.optional-dependencies]
dev = [
    "line_profiler",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/my_project"
